1.11/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: string-writer-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: string-writer-app
  template:
    metadata:
      labels:
        app: string-writer-app
    spec:
      volumes:
        - name: shared-pingpong
          persistentVolumeClaim:
            claimName: pingpong-claim
      containers:
        - name: pingpong
          image: lauraleonilla/pingpongwriter:latest
          volumeMounts:
          - name: shared-pingpong
            mountPath: /usr/src/app/files
        - name: string-reader
          image: lauraleonilla/mainapplicationreadpong:latest
          volumeMounts:
          - name: shared-pingpong
            mountPath: /usr/src/app/files
