1.11/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: string-writer-srv
spec:
  type: ClusterIP
  selector:
    app: string-writer-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3001
